# dbt-slim-ci

./: dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: dbt-docs.yml  pr-dbt.yml
